Added section to app.config.

--- a/DotNetFramework.CustomConfigurationSectionsDemo/App.config
+++ b/DotNetFramework.CustomConfigurationSectionsDemo/App.config
@@ -1,6 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+  <!-- The configSections tag must be the very first tag to be declared in order to work. -->
+  <configSections>
+    <!-- 
+    Here you link the tag name to the custom ConfigurationSection class. 
+    The type attribute consists of the fully qualified class name, followed by the containing assembly. 
+    -->
+    <section name="chat" type="Framework.CustomConfigurationSectionDemo.Configurations.Chat.ChatConfigurationSection, Framework.CustomConfigurationSectionDemo"/>
+  </configSections>
+
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>
+
+  <!-- The custom section can be declared anywhere after the configSections tag. -->
+  <chat>
+    <text textColor="white"/>
+    <voice activationMode="pushToTalk">
+      <pushToTalkActivation activationKey="v"/>
+      <voiceActivation volumeThresholdPercentage="50"/>
+    </voice>
+    <servers>
+      <server displayName="Server A" address="127.0.0.1"/>
+      <server displayName="Server B" address="192.168.0.1"/>
+    </servers>
+  </chat>
 </configuration>
