Added load and display logic for configuration file contents.

--- a/DotNetFramework.CustomConfigurationSectionsDemo/App.config
+++ b/DotNetFramework.CustomConfigurationSectionsDemo/App.config
@@ -6,7 +6,7 @@
     Here you link the tag name to the custom ConfigurationSection class. 
     The type attribute consists of the fully qualified class name, followed by the containing assembly. 
     -->
-    <section name="chat" type="Framework.CustomConfigurationSectionDemo.Configurations.Chat.ChatConfigurationSection, Framework.CustomConfigurationSectionDemo"/>
+    <section name="chat" type="DotNetDemoBin.DotNetFramework.CustomConfigurationSectionsDemo.ApplicationConfiguration.Chat.ChatConfigurationSection, CustomConfigurationSectionsDemo"/>
   </configSections>
 
   <startup>
